security-rbac/kubectl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl-pod
  namespace: mealie-app
spec:
  containers:
  - name: kubectl
    image: bitnami/kubectl
    command: ["sleep", "20000"]
